// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`<FicheContribution /> should render with external content 1`] = `
.c18 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c18 > *:first-child {
  margin-top: 0;
}

.c18 > *:last-child {
  margin-bottom: 0;
}

.c24 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c24 > *:first-child {
  margin-top: 0;
}

.c24 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  padding: 2rem 0;
  color: #3e486e;
}

.c19 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c19 > *:first-child {
  margin-top: 0;
}

.c19 > *:last-child {
  margin-bottom: 0;
}

.c26 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c26 > *:first-child {
  margin-top: 0;
}

.c26 > *:last-child {
  margin-bottom: 0;
}

.c21 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c27 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c44 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c12:link,
.c12:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c12[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c29:link,
.c29:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c29:not([disabled]):hover,
.c29:not([disabled]):active,
.c29:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c29[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c40 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c40:link,
.c40:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c40:not([disabled]):hover,
.c40:not([disabled]):active,
.c40:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c40[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c9:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c34 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c36 {
  margin-top: 0.4rem;
  color: #ff7067;
}

.c20 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c20 > *:first-child {
  margin-top: 0;
}

.c20 > *:last-child {
  margin-bottom: 0;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c23 {
  color: #4d73b8;
  font-weight: 600;
}

.c32 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

.c35 {
  padding: 0 0.4rem;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c31 + .c30 {
  margin-left: 1.6rem;
}

.c15 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c16 {
  width: 80%;
}

.c25 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.c11 ul {
  z-index: 100;
}

.c11 li[role="option"]:nth-child(2n + 1) {
  background: #f2f5fa;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
}

.c14 {
  width: 2.5rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0;
  padding: 0 calc(5.4rem + 1rem) 0 1.6rem;
  font-size: inherit;
  font-family: inherit;
  background: #f2f5fa;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c13 {
  position: absolute;
  top: 0;
  right: 0;
  width: calc(5.4rem - 1rem);
  height: calc(5.4rem - 2px);
  border-top-right-radius: 0.6rem;
  border-bottom-right-radius: 0.6rem;
}

.c0 {
  background: #fff;
}

.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 2rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  width: 8rem;
  height: 100%;
  margin-right: 1.6rem;
}

.c5 {
  font-weight: bold;
  font-size: 1.8rem;
  line-height: 1.2;
}

.c6 {
  width: 350px;
}

.c37 {
  background-color: #f2f5fa;
}

.c38 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  text-align: center;
}

.c38 > *:first-child {
  margin-top: 0;
}

.c38 > *:last-child {
  margin-bottom: 0;
}

.c39 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  margin-bottom: 2rem;
  text-align: left;
}

.c39 > *:first-child {
  margin-top: 0;
}

.c39 > *:last-child {
  margin-bottom: 0;
}

.c41 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c41 > *:first-child {
  margin-top: 0;
}

.c41 > *:last-child {
  margin-bottom: 0;
}

.c43 + .c42 {
  padding-left: 1.6rem;
}

.c45 {
  margin: 0.4rem 0;
}

.c45 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media print {
  .c18 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c24 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c19 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c19 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c26 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c26 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c20 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c22 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c15 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c16 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }
}

@media (max-width:600px) {
  .c10 {
    padding: 0 1.6rem;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:600px) {
  .c1 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:980px) {
  .c6 {
    width: 70%;
    margin-top: 2rem;
  }
}

@media (max-width:600px) {
  .c6 {
    width: 100%;
    margin-top: 2rem;
  }
}

@media print {
  .c6 {
    display: none;
  }
}

@media print {
  .c37 {
    display: none;
  }
}

@media print {
  .c38 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c39 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c41 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c41 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:600px) {
  .c43 + .c42 {
    padding-left: 0;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3"
          href="/"
          title="Code du travail numérique - retour à l'accueil"
        >
          <img
            alt="symbole de la Marianne, site officiel du gouvernement"
            class="c4"
            src="/static/assets/img/marianne.svg"
          />
          <span
            class="c5"
          >
            Code du travail
            <br />
            numérique
          </span>
        </a>
      </div>
      <div
        class="c6"
      >
        <form
          class="c7"
        >
          <label
            class="c8"
            for="main-search-input"
          >
            <span
              class="c9"
            >
              Rechercher
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-cdtn-documents-suggester"
              role="combobox"
              style="flex: 1;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-cdtn-documents-suggester"
                autocomplete="off"
                class="c10"
                id="main-search-input"
                name="query"
                placeholder="Recherche"
                type="search"
                value=""
              />
              <div
                class="c11"
                id="react-autowhatever-cdtn-documents-suggester"
                role="listbox"
              />
            </div>
          </label>
          <button
            class="c12 c13"
            type="submit"
          >
            <svg
              class="c14"
              fill="none"
              viewBox="0 0 32 32"
            >
              <path
                d="M27.319 25.368a.935.935 0 01-1.304 1.341l-6.256-6.012a9.797 9.797 0 01-6.092 2.1C8.327 22.798 4 18.59 4 13.4S8.328 4 13.667 4c5.338 0 9.666 4.208 9.666 9.399 0 2.245-.81 4.307-2.16 5.923l6.146 6.046zm-13.652-4.515c4.234 0 7.666-3.337 7.666-7.454 0-4.117-3.432-7.454-7.666-7.454C9.432 5.945 6 9.282 6 13.399c0 4.117 3.432 7.454 7.667 7.454z"
                fill="currentColor"
              />
            </svg>
          </button>
        </form>
      </div>
    </div>
  </header>
  <main
    id="main"
  >
    <div
      class="c15"
    >
      <div
        class="c16"
      >
        <div
          class="c17"
          data-main-content="true"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c17"
              >
                <div
                  class="c20"
                >
                  <h1
                    class="c21"
                  />
                  <div
                    class="c22"
                  >
                    <span
                      class="c23"
                    >
                      Fiche ministère du Travail
                    </span>
                  </div>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class="accordion"
                    data-accordion-component="Accordion"
                  />
                  <div
                    class="c25"
                  >
                    <a
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Voir le contenu original sur : 
                      Ministère du travail
                       
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c17"
        >
          <div
            class="c18"
          >
            <div
              class="c26"
            >
              <h3
                class="c27"
              >
                Avez-vous trouvé la réponse à votre question ?
              </h3>
              <p
                class="c28"
              >
                <button
                  class="c29 c30 c31"
                >
                  Non
                </button>
                <button
                  class="c29 c30 c31"
                >
                  Oui
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c32"
    >
      <div
        class="c33"
      >
        <div
          class="c34"
          role="alert"
        >
          Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
          <a
            class="c35"
            href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
            rel="noopener noreferrer"
            target="_blank"
            title="consulter l'ordonance"
          >
            L’ouverture officielle du site
          </a>
          est prévue pour 2020.
        </div>
        <button
          aria-label="Fermer"
          class="c12"
        >
          <svg
            class="c36"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            variant="primary"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </main>
  <footer
    class="c37"
  >
    <div
      class="c17"
    >
      <div
        class="c38"
      >
        <h2
          class="c27"
        >
          Besoin d’un accompagnement personnalisé ?
        </h2>
        <div
          class="c39"
        >
          Les services de renseignement en droit du travail peuvent vous donner des informations juridiques générales relatives au Code du travail, aux conventions collectives, à la jurisprudence. Ils peuvent également vous conseiller et vous orienter dans vos démarches.
        </div>
        <button
          class="c40"
        >
          Contacter les services de renseignement
        </button>
      </div>
    </div>
    <div
      class="c17"
    >
      <div
        class="c41"
      >
        <div
          class="c42 c43"
        >
          <h3
            class="c44"
          >
            Code du travail numérique
          </h3>
          <ul>
            <li
              class="c45"
            >
              <a
                href="/droit-du-travail"
              >
                Le droit du travail
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="/glossaire"
              >
                Glossaire
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="/a-propos"
              >
                À propos
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="/mentions-legales"
              >
                Mentions légales
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="mailto:codedutravailnumerique@travail.gouv.fr"
              >
                Contact
              </a>
            </li>
          </ul>
        </div>
        <div
          class="c42 c43"
        >
          <h3
            class="c44"
          >
            Aidez-nous à améliorer cet outil
          </h3>
          <ul>
            <li
              class="c45"
            >
              <a
                href="https://github.com/SocialGouv/code-du-travail-numerique/tree/vX.Y.Z"
                rel="noopener noreferrer"
                target="_blank"
              >
                Contribuer sur Github
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="https://github.com/SocialGouv/code-du-travail-numerique/releases/tag/vX.Y.Z"
                rel="noopener noreferrer"
                target="_blank"
              >
                Journal des modifications
              </a>
            </li>
          </ul>
        </div>
        <div
          class="c42 c43"
        >
          <h3
            class="c44"
          >
            En collaboration avec
          </h3>
          <ul>
            <li
              class="c45"
            >
              <a
                href="https://travail-emploi.gouv.fr/ministere/organisation/article/dgt-direction-generale-du-travail"
                rel="noopener noreferrer"
                target="_blank"
              >
                La Direction Générale du Travail
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="https://incubateur.social.gouv.fr/"
                rel="noopener noreferrer"
                target="_blank"
              >
                L’incubateur des ministères sociaux
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="https://beta.gouv.fr/"
                rel="noopener noreferrer"
                target="_blank"
              >
                beta.gouv.fr
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`<FicheContribution /> should render without external content 1`] = `
.c18 {
=======
exports[`<FicheContribution /> should render 1`] = `
.c17 {
>>>>>>> fix(frontend):Fixed new UI naming
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c18 > *:first-child {
  margin-top: 0;
}

.c18 > *:last-child {
  margin-bottom: 0;
}

.c24 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
}

.c24 > *:first-child {
  margin-top: 0;
}

.c24 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  padding: 2rem 0;
  color: #3e486e;
}

.c19 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c19 > *:first-child {
  margin-top: 0;
}

.c19 > *:last-child {
  margin-bottom: 0;
}

<<<<<<< HEAD
.c26 {
=======
.c24 {
>>>>>>> fix(frontend):Fixed new UI naming
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

<<<<<<< HEAD
.c26 > *:first-child {
  margin-top: 0;
}

.c26 > *:last-child {
=======
.c24 > *:first-child {
  margin-top: 0;
}

.c24 > *:last-child {
>>>>>>> fix(frontend):Fixed new UI naming
  margin-bottom: 0;
}

.c21 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

<<<<<<< HEAD
.c27 {
=======
.c25 {
>>>>>>> fix(frontend):Fixed new UI naming
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

<<<<<<< HEAD
.c44 {
=======
.c42 {
>>>>>>> fix(frontend):Fixed new UI naming
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c12:link,
.c12:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c12[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

<<<<<<< HEAD
.c29 {
=======
.c27 {
>>>>>>> fix(frontend):Fixed new UI naming
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

<<<<<<< HEAD
.c29:link,
.c29:visited {
=======
.c27:link,
.c27:visited {
>>>>>>> fix(frontend):Fixed new UI naming
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

<<<<<<< HEAD
.c29:not([disabled]):hover,
.c29:not([disabled]):active,
.c29:not([disabled]):focus {
=======
.c27:not([disabled]):hover,
.c27:not([disabled]):active,
.c27:not([disabled]):focus {
>>>>>>> fix(frontend):Fixed new UI naming
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

<<<<<<< HEAD
.c29[disabled] {
=======
.c27[disabled] {
>>>>>>> fix(frontend):Fixed new UI naming
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

<<<<<<< HEAD
.c40 {
=======
.c38 {
>>>>>>> fix(frontend):Fixed new UI naming
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

<<<<<<< HEAD
.c40:link,
.c40:visited {
=======
.c38:link,
.c38:visited {
>>>>>>> fix(frontend):Fixed new UI naming
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

<<<<<<< HEAD
.c40:not([disabled]):hover,
.c40:not([disabled]):active,
.c40:not([disabled]):focus {
=======
.c38:not([disabled]):hover,
.c38:not([disabled]):active,
.c38:not([disabled]):focus {
>>>>>>> fix(frontend):Fixed new UI naming
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

<<<<<<< HEAD
.c40[disabled] {
=======
.c38[disabled] {
>>>>>>> fix(frontend):Fixed new UI naming
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

<<<<<<< HEAD
=======
.c43 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

>>>>>>> fix(frontend):Fixed new UI naming
.c9:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

<<<<<<< HEAD
.c33 {
=======
.c31 {
>>>>>>> fix(frontend):Fixed new UI naming
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #ff7067;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

<<<<<<< HEAD
.c34 {
=======
.c32 {
>>>>>>> fix(frontend):Fixed new UI naming
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

<<<<<<< HEAD
.c36 {
=======
.c34 {
>>>>>>> fix(frontend):Fixed new UI naming
  margin-top: 0.4rem;
  color: #ff7067;
}

.c20 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  position: relative;
  margin-bottom: 2rem;
}

.c20 > *:first-child {
  margin-top: 0;
}

.c20 > *:last-child {
  margin-bottom: 0;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c23 {
  color: #4d73b8;
  font-weight: 600;
}

<<<<<<< HEAD
.c32 {
=======
.c30 {
>>>>>>> fix(frontend):Fixed new UI naming
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1.6rem;
}

<<<<<<< HEAD
.c35 {
  padding: 0 0.4rem;
}

.c28 {
=======
.c33 {
  padding: 0 0.4rem;
}

.c26 {
>>>>>>> fix(frontend):Fixed new UI naming
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

<<<<<<< HEAD
.c31 + .c30 {
  margin-left: 1.6rem;
}

.c15 {
=======
.c29 + .c28 {
  margin-left: 1.6rem;
}

.c14 {
>>>>>>> fix(frontend):Fixed new UI naming
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c16 {
  width: 80%;
}

<<<<<<< HEAD
.c25 {
  margin-top: 4rem;
  padding: 1.6rem;
  background-color: #f2f5fa;
  border-radius: 0.6rem;
}

=======
>>>>>>> fix(frontend):Fixed new UI naming
.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.c11 ul {
  z-index: 100;
}

.c11 li[role="option"]:nth-child(2n + 1) {
  background: #f2f5fa;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
}

.c14 {
  width: 2.5rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0;
  padding: 0 calc(5.4rem + 1rem) 0 1.6rem;
  font-size: inherit;
  font-family: inherit;
  background: #f2f5fa;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c13 {
  position: absolute;
  top: 0;
  right: 0;
  width: calc(5.4rem - 1rem);
  height: calc(5.4rem - 2px);
  border-top-right-radius: 0.6rem;
  border-bottom-right-radius: 0.6rem;
}

.c0 {
  background: #fff;
}

.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 2rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  width: 8rem;
  height: 100%;
  margin-right: 1.6rem;
}

.c5 {
  font-weight: bold;
  font-size: 1.8rem;
  line-height: 1.2;
}

.c6 {
  width: 350px;
}

<<<<<<< HEAD
.c37 {
  background-color: #f2f5fa;
}

.c38 {
=======
.c35 {
  background-color: #f2f5fa;
}

.c36 {
>>>>>>> fix(frontend):Fixed new UI naming
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  text-align: center;
}

<<<<<<< HEAD
.c38 > *:first-child {
  margin-top: 0;
}

.c38 > *:last-child {
  margin-bottom: 0;
}

.c39 {
=======
.c36 > *:first-child {
  margin-top: 0;
}

.c36 > *:last-child {
  margin-bottom: 0;
}

.c37 {
>>>>>>> fix(frontend):Fixed new UI naming
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 74rem;
  padding: 0;
  margin-bottom: 2rem;
  text-align: left;
}

<<<<<<< HEAD
.c39 > *:first-child {
  margin-top: 0;
}

.c39 > *:last-child {
  margin-bottom: 0;
}

.c41 {
=======
.c37 > *:first-child {
  margin-top: 0;
}

.c37 > *:last-child {
  margin-bottom: 0;
}

.c39 {
>>>>>>> fix(frontend):Fixed new UI naming
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<<<<<<< HEAD
.c41 > *:first-child {
  margin-top: 0;
}

.c41 > *:last-child {
  margin-bottom: 0;
}

.c43 + .c42 {
=======
.c39 > *:first-child {
  margin-top: 0;
}

.c39 > *:last-child {
  margin-bottom: 0;
}

.c41 + .c40 {
>>>>>>> fix(frontend):Fixed new UI naming
  padding-left: 1.6rem;
}

.c44 {
  margin: 0.4rem 0;
}

.c44 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media print {
  .c18 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c24 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c19 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c19 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
<<<<<<< HEAD
  .c26 {
=======
  .c24 {
>>>>>>> fix(frontend):Fixed new UI naming
    padding: 1rem 2rem;
  }
}

@media print {
<<<<<<< HEAD
  .c26 {
=======
  .c24 {
>>>>>>> fix(frontend):Fixed new UI naming
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c20 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c22 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c15 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c16 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }
}

@media (max-width:600px) {
  .c10 {
    padding: 0 1.6rem;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:600px) {
  .c1 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:980px) {
  .c6 {
    width: 70%;
    margin-top: 2rem;
  }
}

@media (max-width:600px) {
  .c6 {
    width: 100%;
    margin-top: 2rem;
  }
}

@media print {
<<<<<<< HEAD
  .c6 {
=======
  .c35 {
>>>>>>> fix(frontend):Fixed new UI naming
    display: none;
  }
}

@media print {
<<<<<<< HEAD
  .c37 {
    display: none;
  }
}

@media print {
  .c38 {
=======
  .c36 {
>>>>>>> fix(frontend):Fixed new UI naming
    max-width: 100%;
    padding: 0;
  }
}

@media print {
<<<<<<< HEAD
  .c39 {
=======
  .c37 {
>>>>>>> fix(frontend):Fixed new UI naming
    max-width: 100%;
    padding: 0;
  }
}

@media print {
<<<<<<< HEAD
  .c41 {
=======
  .c39 {
>>>>>>> fix(frontend):Fixed new UI naming
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
<<<<<<< HEAD
  .c41 {
=======
  .c39 {
>>>>>>> fix(frontend):Fixed new UI naming
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:600px) {
<<<<<<< HEAD
  .c43 + .c42 {
=======
  .c41 + .c40 {
>>>>>>> fix(frontend):Fixed new UI naming
    padding-left: 0;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
<<<<<<< HEAD
        <a
          class="c3"
          href="/"
          title="Code du travail numérique - retour à l'accueil"
        >
          <img
            alt="symbole de la Marianne, site officiel du gouvernement"
            class="c4"
            src="/static/assets/img/marianne.svg"
          />
          <span
            class="c5"
          >
            Code du travail
            <br />
            numérique
          </span>
        </a>
      </div>
      <div
        class="c6"
      >
        <form
          class="c7"
        >
          <label
            class="c8"
            for="main-search-input"
=======
        <div
          class="c2"
        >
          <a
            class="c3"
            href="/"
            title="Code du travail numérique - retour à l'accueil"
>>>>>>> fix(frontend):Fixed new UI naming
          >
            <span
<<<<<<< HEAD
              class="c9"
=======
              class="c5"
>>>>>>> fix(frontend):Fixed new UI naming
            >
              Rechercher
            </span>
<<<<<<< HEAD
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-cdtn-documents-suggester"
              role="combobox"
              style="flex: 1;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-cdtn-documents-suggester"
                autocomplete="off"
                class="c10"
                id="main-search-input"
                name="query"
                placeholder="Recherche"
                type="search"
                value=""
              />
              <div
                class="c11"
                id="react-autowhatever-cdtn-documents-suggester"
                role="listbox"
              />
            </div>
          </label>
          <button
            class="c12 c13"
            type="submit"
          >
            <svg
              class="c14"
              fill="none"
              viewBox="0 0 32 32"
=======
          </a>
        </div>
        <div
          class="c6"
        >
          <form
            class="c7"
          >
            <label
              class="c8"
              for="main-search-input"
            >
              <span
                class="c9"
              >
                Rechercher
              </span>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-cdtn-documents-suggester"
                role="combobox"
                style="flex: 1;"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-cdtn-documents-suggester"
                  autocomplete="off"
                  class="c10"
                  id="main-search-input"
                  name="query"
                  placeholder="Recherche"
                  type="search"
                  value=""
                />
                <div
                  class="c11"
                  id="react-autowhatever-cdtn-documents-suggester"
                  role="listbox"
                />
              </div>
            </label>
            <button
              class="c12 c13"
              type="submit"
>>>>>>> fix(frontend):Fixed new UI naming
            >
              <path
                d="M27.319 25.368a.935.935 0 01-1.304 1.341l-6.256-6.012a9.797 9.797 0 01-6.092 2.1C8.327 22.798 4 18.59 4 13.4S8.328 4 13.667 4c5.338 0 9.666 4.208 9.666 9.399 0 2.245-.81 4.307-2.16 5.923l6.146 6.046zm-13.652-4.515c4.234 0 7.666-3.337 7.666-7.454 0-4.117-3.432-7.454-7.666-7.454C9.432 5.945 6 9.282 6 13.399c0 4.117 3.432 7.454 7.667 7.454z"
                fill="currentColor"
              />
            </svg>
          </button>
        </form>
      </div>
<<<<<<< HEAD
    </div>
  </header>
  <main
    id="main"
  >
    <div
      class="c15"
    >
      <div
        class="c16"
      >
        <div
          class="c17"
          data-main-content="true"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c17"
              >
                <div
                  class="c20"
                >
                  <h1
                    class="c21"
                  />
                  <div
                    class="c22"
                  >
                    <span
                      class="c23"
                    >
                      Fiche ministère du Travail
                    </span>
                  </div>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class="accordion"
                    data-accordion-component="Accordion"
                  />
                  <div
                    class="c25"
                  >
                    <a
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Voir le contenu original sur : 
                      Ministère du travail
                       
                    </a>
                  </div>
=======
    </header>
    <main
      id="main"
    >
      <div
        class="c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16"
            data-main-content="true"
          >
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="c16"
                >
                  <div
                    class="c19"
                  >
                    <h1
                      class="c20"
                    />
                    <div
                      class="c21"
                    >
                      <span
                        class="c22"
                      >
                        Réponse personnalisée selon votre convention collective
                      </span>
                    </div>
                  </div>
                  <div
                    class="c23"
                  />
>>>>>>> fix(frontend):Fixed new UI naming
                </div>
              </div>
            </div>
          </div>
<<<<<<< HEAD
        </div>
        <div
          class="c17"
        >
          <div
            class="c18"
          >
            <div
              class="c26"
            >
              <h3
                class="c27"
              >
                Avez-vous trouvé la réponse à votre question ?
              </h3>
              <p
                class="c28"
              >
                <button
                  class="c29 c30 c31"
                >
                  Non
                </button>
                <button
                  class="c29 c30 c31"
                >
                  Oui
                </button>
              </p>
=======
          <div
            class="c16"
          >
            <div
              class="c17"
            >
              <div
                class="c24"
              >
                <h3
                  class="c25"
                >
                  Avez-vous trouvé la réponse à votre question ?
                </h3>
                <p
                  class="c26"
                >
                  <button
                    class="c27 c28 c29"
                  >
                    Non
                  </button>
                  <button
                    class="c27 c28 c29"
                  >
                    Oui
                  </button>
                </p>
              </div>
>>>>>>> fix(frontend):Fixed new UI naming
            </div>
          </div>
        </div>
      </div>
<<<<<<< HEAD
    </div>
    <div
      class="c32"
    >
      <div
        class="c33"
      >
        <div
          class="c34"
          role="alert"
        >
          Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
          <a
            class="c35"
            href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
            rel="noopener noreferrer"
            target="_blank"
            title="consulter l'ordonance"
          >
            L’ouverture officielle du site
          </a>
          est prévue pour 2020.
        </div>
        <button
          aria-label="Fermer"
          class="c12"
        >
          <svg
            class="c36"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            variant="primary"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </main>
  <footer
    class="c37"
  >
    <div
      class="c17"
    >
      <div
        class="c38"
      >
        <h2
          class="c27"
        >
          Besoin d’un accompagnement personnalisé ?
        </h2>
        <div
          class="c39"
        >
          Les services de renseignement en droit du travail peuvent vous donner des informations juridiques générales relatives au Code du travail, aux conventions collectives, à la jurisprudence. Ils peuvent également vous conseiller et vous orienter dans vos démarches.
        </div>
        <button
          class="c40"
        >
          Contacter les services de renseignement
        </button>
      </div>
    </div>
    <div
      class="c17"
    >
      <div
        class="c41"
      >
        <div
          class="c42 c43"
        >
          <h3
            class="c44"
          >
            Code du travail numérique
          </h3>
          <ul>
            <li
              class="c45"
            >
              <a
                href="/droit-du-travail"
              >
                Le droit du travail
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="/glossaire"
              >
                Glossaire
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="/a-propos"
              >
                À propos
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="/mentions-legales"
              >
                Mentions légales
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="mailto:codedutravailnumerique@travail.gouv.fr"
              >
                Contact
              </a>
            </li>
          </ul>
        </div>
        <div
          class="c42 c43"
        >
          <h3
            class="c44"
          >
            Aidez-nous à améliorer cet outil
          </h3>
          <ul>
            <li
              class="c45"
            >
              <a
                href="https://github.com/SocialGouv/code-du-travail-numerique/tree/vX.Y.Z"
                rel="noopener noreferrer"
                target="_blank"
              >
                Contribuer sur Github
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="https://github.com/SocialGouv/code-du-travail-numerique/releases/tag/vX.Y.Z"
                rel="noopener noreferrer"
                target="_blank"
              >
                Journal des modifications
              </a>
            </li>
          </ul>
        </div>
        <div
          class="c42 c43"
        >
          <h3
            class="c44"
          >
            En collaboration avec
          </h3>
          <ul>
            <li
              class="c45"
            >
              <a
                href="https://travail-emploi.gouv.fr/ministere/organisation/article/dgt-direction-generale-du-travail"
                rel="noopener noreferrer"
                target="_blank"
              >
                La Direction Générale du Travail
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="https://incubateur.social.gouv.fr/"
                rel="noopener noreferrer"
                target="_blank"
              >
                L’incubateur des ministères sociaux
              </a>
            </li>
            <li
              class="c45"
            >
              <a
                href="https://beta.gouv.fr/"
                rel="noopener noreferrer"
                target="_blank"
              >
                beta.gouv.fr
              </a>
            </li>
          </ul>
=======
      <div
        class="c30"
      >
        <div
          class="c31"
        >
          <div
            class="c32"
            role="alert"
          >
            Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
            <a
              class="c33"
              href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
              rel="noopener noreferrer"
              target="_blank"
              title="consulter l'ordonance"
            >
              L’ouverture officielle du site
            </a>
            est prévue pour 2020.
          </div>
          <button
            aria-label="Fermer"
            class="c12"
          >
            <svg
              class="c34"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              variant="primary"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </div>
      </div>
    </main>
    <footer
      class="c35"
    >
      <div
        class="c16"
      >
        <div
          class="c36"
        >
          <h2
            class="c25"
          >
            Besoin d’un accompagnement personnalisé ?
          </h2>
          <div
            class="c37"
          >
            Les services de renseignement en droit du travail peuvent vous donner des informations juridiques générales relatives au Code du travail, aux conventions collectives, à la jurisprudence. Ils peuvent également vous conseiller et vous orienter dans vos démarches.
          </div>
          <button
            class="c38"
          >
            Contacter les services de renseignement
          </button>
        </div>
      </div>
      <div
        class="c16"
      >
        <div
          class="c39"
        >
          <div
            class="c40 c41"
          >
            <h3
              class="c42"
            >
              Code du travail numérique
            </h3>
            <ul
              class="c43"
            >
              <li
                class="c44"
              >
                <a
                  href="/droit-du-travail"
                >
                  Le droit du travail
                </a>
              </li>
              <li
                class="c44"
              >
                <a
                  href="/glossaire"
                >
                  Glossaire
                </a>
              </li>
              <li
                class="c44"
              >
                <a
                  href="/a-propos"
                >
                  À propos
                </a>
              </li>
              <li
                class="c44"
              >
                <a
                  href="/mentions-legales"
                >
                  Mentions légales
                </a>
              </li>
              <li
                class="c44"
              >
                <a
                  href="mailto:codedutravailnumerique@travail.gouv.fr"
                >
                  Contact
                </a>
              </li>
            </ul>
          </div>
          <div
            class="c40 c41"
          >
            <h3
              class="c42"
            >
              Aidez-nous à améliorer cet outil
            </h3>
            <ul
              class="c43"
            >
              <li
                class="c44"
              >
                <a
                  href="https://github.com/SocialGouv/code-du-travail-numerique/tree/vX.Y.Z"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Contribuer sur Github
                </a>
              </li>
              <li
                class="c44"
              >
                <a
                  href="https://github.com/SocialGouv/code-du-travail-numerique/releases/tag/vX.Y.Z"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Journal des modifications
                </a>
              </li>
            </ul>
          </div>
          <div
            class="c40 c41"
          >
            <h3
              class="c42"
            >
              En collaboration avec
            </h3>
            <ul
              class="c43"
            >
              <li
                class="c44"
              >
                <a
                  href="https://travail-emploi.gouv.fr/ministere/organisation/article/dgt-direction-generale-du-travail"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  La Direction Générale du Travail
                </a>
              </li>
              <li
                class="c44"
              >
                <a
                  href="https://incubateur.social.gouv.fr/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  L’incubateur des ministères sociaux
                </a>
              </li>
              <li
                class="c44"
              >
                <a
                  href="https://beta.gouv.fr/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  beta.gouv.fr
                </a>
              </li>
            </ul>
          </div>
>>>>>>> fix(frontend):Fixed new UI naming
        </div>
      </div>
    </div>
  </footer>
</div>
`;
